nowrap fix for longer names

--- a/src/app/reports/employees/org-dropdown/org-dropdown.component.css
+++ b/src/app/reports/employees/org-dropdown/org-dropdown.component.css
@@ -14,11 +14,12 @@ ul.emp-cont-inner {
 .emp-name {
   position: relative;
   left: -1px;
-  padding: 10px;
+  padding: 6px 10px;
   width: 200px;
   background-color: rgb(250, 250, 250);
   display: inline-block;
   border-left: 1px solid lightgrey;
+  white-space: nowrap;
 }
 
 div.team-cont {
